경매와 포인트 로직 수정